--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥there is a simple method to increase your penis by +7.5 cm in just 2 weeks!🍆💦">
 <meta property="og:description" content="😉I’ve been taking Longjack XXXL for just a month, and results are already exceeding all my expectations.👍">
-<meta property="og:image" content="https://i.imgur.com/VwLHCk2.png">
+<meta property="og:image" content="https://i.imgur.com/h7krIWh.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
