--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥there is a simple method to increase your penis by +7.5 cm in just 2 weeks!🍆💦">
-<meta property="og:description" content="😉I’ve been taking Longjack XXXL for just a month, and results are already exceeding all my expectations.👍">
-<meta property="og:image" content="https://i.imgur.com/h7krIWh.png">
+<meta property="og:title" content="🔥Like🔥">
+<meta property="og:description" content="💥Super💥">
+<meta property="og:image" content="https://img5.goodfon.ru/wallpaper/nbig/1/ad/tiger-turtle-magic-mountain-angerpark-duisburg-germany-tigr.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
